--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@ tagline:
     <a href="{{ site.BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
   </h2>
 
-  <div>
-    {% if post.fullview %}
-    {{ post.content }}
-    {% else %}
-    {% if post.shortinfo %}
-    {{ post.shortinfo }}
-    {% elsif post.description %}
-    {{ post.description }}
-    {% else %}
-    {{ post.excerpt }}
-    {% endif %}
-    {% endif %}
-  </div>
+  <!-- <div> -->
+  <!--   {% if post.fullview %} -->
+  <!--   {{ post.content }} -->
+  <!--   {% else %} -->
+  <!--   {% if post.shortinfo %} -->
+  <!--   {{ post.shortinfo }} -->
+  <!--   {% elsif post.description %} -->
+  <!--   {{ post.description }} -->
+  <!--   {% else %} -->
+  <!--   {{ post.excerpt }} -->
+  <!--   {% endif %} -->
+  <!--   {% endif %} -->
+  <!-- </div> -->
 
 </article>
 {% endfor %}
